--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,10 +1,65 @@
+# name: Build and Deploy to JFrog
+
+# on:
+#   workflow_dispatch:
+#     inputs:
+#       repo_url:
+#         description: 'GitHub Repository (owner/repo-name)'
+#         required: true
+#       jfrog_url:
+#         description: 'JFrog Artifactory URL'
+#         required: true
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Target Repo
+#         uses: actions/checkout@v4
+#         with:
+#           repository: ${{ github.event.inputs.repo_url }}
+#           # repository: ${{ github.event.inputs.repo_url }}
+#           token: ${{ secrets.GH_TOKEN }}
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: 18
+#           cache: 'npm'
+
+#       - name: Install Dependencies
+#         run: npm install
+
+#       - name: Run Unit Tests
+#         run: npm test
+
+#       - name: Build Application
+#         run: npm run build
+
+#       - name: Upload Build Artifact
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: build-artifact
+#           path: dist/
+#           retention-days: 1
+
+#   deploy:
+#     needs: build
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Download Build Artifact
+#         uses: actions/download-artifact@v4
+#         with:
+#           name: build-artifact
+#           path: dist/
+
 name: Build and Deploy to JFrog
 
 on:
   workflow_dispatch:
     inputs:
       repo_url:
-        description: 'GitHub Repository (owner/repo-name)'
+        description: 'GitHub Repository (format: owner/repo-name)'
         required: true
       jfrog_url:
         description: 'JFrog Artifactory URL'
@@ -46,13 +101,19 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Target Repo
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ github.event.inputs.repo_url }}
+          token: ${{ secrets.GH_TOKEN }}
+
       - name: Download Build Artifact
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
           path: dist/
 
-      - name: Upload Artifact to JFrog via CURL (Hardcoded)
+      - name: Upload Artifact to JFrog (Hardcoded Credentials)
         run: |
           echo "Uploading artifact to JFrog..."
           FILE_PATH="dist/*"
